--- a/Project/Project/DBAccessor.csproj
+++ b/Project/Project/DBAccessor.csproj
@@ -75,6 +75,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataAccessor.cs" />
+    <Compile Include="DataSet1oldold.cs">
+      <DependentUpon>DataSet1oldold.xsd</DependentUpon>
+    </Compile>
     <Compile Include="DataSet1Old.cs">
       <DependentUpon>DataSet1Old.xsd</DependentUpon>
     </Compile>
@@ -92,6 +95,11 @@
     <Compile Include="DBFactory.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="DataSet1oldold.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DataSet1oldold.xsd</DependentUpon>
+    </Compile>
     <Compile Include="DataSet1.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -128,6 +136,17 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="DataSet1oldold.xsc">
+      <DependentUpon>DataSet1oldold.xsd</DependentUpon>
+    </None>
+    <None Include="DataSet1oldold.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>DataSet1oldold.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="DataSet1oldold.xss">
+      <DependentUpon>DataSet1oldold.xsd</DependentUpon>
+    </None>
     <None Include="DataSet1.xsc">
       <DependentUpon>DataSet1.xsd</DependentUpon>
     </None>
